--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,124 +7,162 @@
 /* Common styles */
 @import url('./reset.css');
 @import url('./base.css');
-@import url('./container.css');
-@import url('./animations.css');
-
-/* Sections style */
-@import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css');
-
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f7f7f7;
-  margin: 0;
-  padding: 20px;
-}
-
-header {
-  text-align: center;
-  margin-bottom: 20px;
-}
 
 .form {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
+  margin-top: 80px;
+  text-align: center;
+  margin-bottom: 40px;
 }
 
 .input-gallery {
-  padding: 10px;
-  width: 300px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  padding: 8px 16px;
+
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #808080;
+
+  margin-right: 8px;
+  margin-bottom: 8px;
+  outline: none;
 }
 
-.button-gallery {
-  padding: 10px 20px;
-  background-color: #2196f3;
-  color: white;
+.input-gallery:hover,
+.input-gallery:focus {
+  border: 1px solid #000;
+}
+
+.input-gallery:active {
+  border: 1px solid #4e75ff;
+}
+
+.button-gallery,
+.load-more {
   border: none;
   border-radius: 8px;
-  cursor: pointer;
+  padding: 8px 16px;
+  background-color: #4e75ff;
+
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+.button-gallery:hover,
+.button-gallery:focus,
+.button-gallery:hover,
+.button-gallery:focus {
+  background-color: #6c8cff;
 }
 
 .gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-  gap: 20px;
-  padding: 0;
-  list-style: none;
+  display: flex;
+  gap: 24px;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 0 24px;
 }
 
 .gallery-item {
-  background-color: white;
-  border-radius: 8px;
-  overflow: hidden;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  width: calc((100% - 24px * 3) / 4);
+  box-sizing: border-box;
+  border-bottom: 1px solid #808080;
+  border-left: 1px solid #808080;
+  border-right: 1px solid #808080;
 }
 
-.gallery-item img {
+@media screen and (max-width: 1260px) {
+  .gallery-item {
+    width: calc((100% - 24px * 2) / 3);
+  }
+}
+
+@media screen and (max-width: 980px) {
+  .gallery-item {
+    width: calc((100% - 24px * 1) / 2);
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .gallery-item {
+    width: 100%;
+  }
+}
+
+.gallery-image {
+  border: 1px solid #808080;
   width: 100%;
   height: 200px;
+  display: block;
   object-fit: cover;
-  display: block;
 }
 
-.info {
+.stats {
   display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  padding: 10px;
-  background-color: #fafafa;
-  border-top: 1px solid #eee;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
-.info-item {
-  flex: 1 1 50%;
+.stats p {
   text-align: center;
-  padding: 5px 0;
-}
-
-.info-item b {
-  display: block;
-  font-weight: 600;
-  margin-bottom: 2px;
-  color: #555;
-}
-
-.load-more {
-  display: block;
-  margin: 30px auto;
-  padding: 10px 20px;
-  font-size: 16px;
-  background-color: #4caf50;
-  color: white;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-}
-
-.loader.hidden,
-.load-more.hidden {
-  display: none;
+  display: flex;
+  flex-direction: column;
 }
 
 .loader {
-  display: block;
-  margin: 20px auto;
-  width: 40px;
-  height: 40px;
-  border: 5px solid #ccc;
-  border-top-color: #2196f3;
+  width: 48px;
+  height: 48px;
   border-radius: 50%;
-  animation: spin 1s linear infinite;
+  position: relative;
+  animation: rotate 1s linear infinite;
+  visibility: hidden;
+  margin: 0 auto;
+  display: block;
+}
+.loader::before {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  inset: 0px;
+  border-radius: 50%;
+  border: 5px solid #4e75ff;
+  animation: prixClipFix 2s linear infinite;
 }
 
-@keyframes spin {
-  to {
+@keyframes rotate {
+  100% {
     transform: rotate(360deg);
   }
+}
+
+@keyframes prixClipFix {
+  0% {
+    clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0);
+  }
+  25% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0);
+  }
+  50% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%);
+  }
+  75% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 100%);
+  }
+  100% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 0);
+  }
+}
+
+.load-more {
+  margin: 30px auto;
+  width: 20%;
+  visibility: hidden;
 }
